<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/image_vine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_form"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:src="@drawable/vineyard"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/layout_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Username"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:layout_below="@+id/text_username"
            android:hint="@string/text_hint_username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_username"
            android:layout_marginBottom="8dp"
            android:text="Password"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:hint="@string/text_hint_password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"/>

        <Button
            style="@style/SignInButtonStyle"
            android:id="@+id/button_sign_in"
            android:layout_below="@id/edit_text_password"
            android:text="Sign In"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/edit_text_password"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>