<resources>
    <string name="app_name">Vineyard</string>
    <string name="tv_input_activity">com.hitherejoe.vineyard.livechannels.VineTvSetup</string>

    <!-- Activity labels -->
    <string name="label_main">Vineyard</string>
    <string name="related_posts">Related posts</string>

    <!-- Headers -->
    <string name="header_text_settings">Settings</string>
    <string name="header_text_options">Options</string>
    <string name="header_text_popular">Popular</string>
    <string name="header_text_editors_picks">Editor\'s Picks</string>

    <!-- Connect Activity -->
    <string name="text_hint_username">Username</string>
    <string name="text_hint_password">Password</string>

    <!-- Search -->
    <string name="text_search_results">Search results</string>
    <string name="text_post_results_title">Posts for %s</string>
    <string name="text_no_results">No results</string>

    <!-- Guided Step -->
    <string name="guided_step_auto_loop_title">Auto-Loop</string>
    <string name="guided_step_auto_loop_breadcrumb">Videos will automatically loop</string>
    <string name="guided_step_auto_loop_description">Enabling this option will make videos automatically loop once they start playing. Would you like this to be enabled?</string>

    <string name="guided_step_auto_loop_enabled">Enabled</string>
    <string name="guided_step_auto_loop_enabled_description">Automatically loop videos</string>
    <string name="guided_step_auto_loop_disabled">Disabled</string>
    <string name="guided_step_auto_loop_disabled_description">Play videos simultaneously</string>

    <!-- Error Fragments -->
    <string name="text_error_oops_title">Oops</string>
    <string name="text_error_oops_message">It looks like an error occurred, please try again!</string>
    <string name="text_error_dismiss">Dismiss</string>

    <!-- Settings -->
    <string name="text_auto_loop_title">Auto-loop</string>
    <string name="text_auto_loop_enabled">Enabled</string>
    <string name="text_auto_loop_disabled">Disabled</string>

    <!-- Dialogs -->

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_delete">Delete</string>
    <string name="dialog_action_cancel">Cancel</string>

    <string name="dialog_error_title">Oops</string>
    <string name="dialog_general_error_Message">There was an error making the request</string>
    <string name="dialog_error_no_connection">Sorry, you need a connection to do that!</string>

    <string name="error_message_network_connection">Please check your network connection and try again!</string>
    <string name="error_message_network_needed">Oops, you need a network connection to do that!</string>
    <string name="error_message_network_needed_app">Oops, you need a network connection to use Vineyard!</string>
    <string name="error_message_sign_in">Oops, there was a problem signing in. Please try again!</string>
    <string name="error_message_sign_in_blank">Oops, username and password can\'t be empty!</string>
    <string name="error_message_sign_in_blank_username">Oops, username can\'t be empty!</string>
    <string name="error_message_sign_in_blank_password">Oops, password can\'t be empty!</string>
    <string name="error_message_loading_more_posts">Sorry, there was an error loading more posts</string>
    <string name="error_message_retrieving_results">Sorry, there was an error retrieving the results</string>
    <string name="title_oops">Oops</string>
    <string name="title_no_videos">No videos</string>
    <string name="message_try_again">Try again?</string>
    <string name="message_check_again">Check again?</string>
    <string name="text_close">Close</string>

    <string-array name="categories">
        <item>@string/header_text_popular</item>
        <item>@string/header_text_editors_picks</item>
        <item>Scary</item>
        <item>Comedy</item>
        <item>Animals</item>
        <item>Music</item>
        <item>Art</item>
        <item>Dance</item>
        <item>Sports</item>
        <item>OMG</item>
        <item>Style</item>
        <item>Family</item>
        <item>Food</item>
        <item>DIY</item>
        <item>Places</item>
        <item>News</item>
    </string-array>

    <string-array name="icons">
        <item>@drawable/ic_popular</item>
        <item>@drawable/ic_editors_picks</item>
        <item>@drawable/ic_scary</item>
        <item>@drawable/ic_tongue</item>
        <item>@drawable/ic_cat</item>
        <item>@drawable/ic_music</item>
        <item>@drawable/ic_palette</item>
        <item>@drawable/ic_walk</item>
        <item>@drawable/ic_football</item>
        <item>@drawable/ic_neutral</item>
        <item>@drawable/ic_shirt</item>
        <item>@drawable/ic_family</item>
        <item>@drawable/ic_pizza</item>
        <item>@drawable/ic_wrench</item>
        <item>@drawable/ic_marker</item>
        <item>@drawable/ic_news</item>
    </string-array>

</resources>
